test/libyul/yulSyntaxTests/if_statement_fail_2.yul
{ if true let x := 3 }
// ----
// ParserError 2314: (10-13): Expected '{' but got reserved keyword 'let'
